# NCSIOverride

./: .gitignore  CMakeLists.txt  Get-Interface-GUID.ps1  Install.reg  NCSIOverride.cpp  NCSIOverride.h  README.md  Uninstall.reg  Update-Offset.ps1
MinHook/: libMinHook.x64.lib  libMinHook.x86.lib
Release-x64/: ConfigManager.cmd  Install.cmd  Uninstall.cmd
